condensed and simplified tests